# TikD-R

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md
.github/workflows/: ci.yml
src/: cli.rs  downloader.rs  error.rs  lib.rs  main.rs  scraper.rs
tests/: cli.rs  live.rs
tests/fixtures/: sample_sigi_state.html  sample_universal_data.html
