[package]
name = "tikd-r"
version = "0.1.0"
edition = "2021"

[features]
default = []
live-tests = []

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies", "gzip", "brotli"] }
reqwest_cookie_store = "0.7"
scraper = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5"
futures = "0.3"

[dev-dependencies]
tempfile = "3.10"
